# fuelmap

./: README.md
contracts/galaxy_template/: Cargo.toml  Forc.toml
contracts/galaxy_template/src/: errors.sw  main.sw
contracts/galaxy_template/tests/: harness.rs
contracts/task_utils/: Forc.toml
fuelmap-app/: .eslintrc.cjs  capacitor.config.ts  fuels.config.ts  ionic.config.json  package.json  tsconfig.json  vite.config.ts
fuelmap-app/.fuels/snapshotDir/: stateConfig.json
fuelmap-app/src/: App.tsx  providers.tsx
fuelmap-app/src/api/: local.ts
fuelmap-app/src/components/BackupDisplay/: BackupDisplay.tsx
fuelmap-app/src/components/ColorPicker/: ColorPicker.scss  ColorPicker.tsx
fuelmap-app/src/fuels/: lib.ts
fuelmap-app/src/hooks/: dnd-hook.ts  dnd.handler.ts  dnd.helpers.ts
fuelmap-app/src/modals/: EditGalaxy.modal.tsx
fuelmap-app/src/models/: backup.ts  galaxy.ts  hex.ts  utils.ts
fuelmap-app/src/pages/: Home.scss  Home.tsx
fuelmap-app/src/store/: backup.slice.ts  galaxies.slice.ts  store.ts  tasks.errors.ts  tasks.slice.ts  tasks.slice.utils.ts  tasks.utils.ts
fuelmap-app/src/sway-api/: contract-ids.json  index.ts
fuelmap-app/src/theme/: variables.scss
fuelmap-app/src/types/: backup.ts  enums.ts  galaxy.ts  task.ts
fuelmap-app/sway-programs/: Forc.toml
fuelmap-app/sway-programs/fuelmap-instance/: Forc.toml
fuelmap-app/sway-programs/fuelmap-template/: Forc.toml
fuelmap-app/sway-programs/galaxy/: Forc.toml
fuelmap-app/sway-programs/galaxy-nft/: Forc.toml
fuelmap-app/sway-programs/ownable-nft/: Forc.toml
(+44 files in other folders)
